aks/nsg-lockdown/bastion.tf
resource "azurerm_public_ip" "bastion" {
  name                = "${local.bastion_name}-pip"
  resource_group_name = azurerm_resource_group.this["network"].name
  location            = azurerm_resource_group.this["network"].location
  allocation_method   = "Static"
  sku                 = "Standard"
}

resource "azurerm_bastion_host" "this" {
  name                = local.bastion_name
  location            = azurerm_resource_group.this["network"].location
  resource_group_name = azurerm_resource_group.this["network"].name
  sku                 = "Standard"
  tunneling_enabled   = true

  ip_configuration {
    name                 = "configuration"
    subnet_id            = azurerm_subnet.bastion.id
    public_ip_address_id = azurerm_public_ip.bastion.id
  }
}
